--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "devDependencies": {
     "enzyme": "^2.4.1",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
     "react-addons-test-utils": "^15.3.0",
     "react-scripts": "^0.9.3"
   },
-    
   "dependencies": {
     "prop-types": "^15.5.8",
     "react": "^15.5.0",
     "react-dom": "^15.5.0",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "react-redux": "^5.0.3",
+    "redux": "^3.5.2",
+    "redux-undo": "^0.6.1"    
   },
   "scripts": {
     "start": "react-scripts start",
